Criando o primeiro cadastro de pessoa

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="principal.html" class="brand-logo">LogoMarca</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="principal.html">Página Principal</a></li>
+        <li><a href="/cadastropessoa">Cadastro</a></li>
         <li><a href="principal.html">Sair</a></li>
       </ul>
 
