--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR"
+		xmlns="http://www.w3.org/1999/xhtml"
+		xmlns:th="http://thymeleaf.org"
+		xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
-  <title>Starter Template - Materialize</title>
+  <title>App</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="../css/styleCad.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link type="text/css" rel="stylesheet" href="../materialize/css/materialize.min.css"  media="screen,projection"/>
 </head>
 <body>
   <nav class="light-blue lighten-1" role="navigation">
@@ -23,21 +28,50 @@
   <div class="container">
     <div class="section">
     	
-		<form id="formPessoa" action="salvarpessoa" method="post">
-			
-			<label for="nome">Nome:</label>
-			<input type="text" id="nome" name="nome">
-			
-			<label for="sobrenome">Sobrenome:</label>
-			<input type="text" id="sobrenome" name="sobrenome">
-			
-			<label for="idade">Idade:</label>
-			<input type="text" id="idade" name="idade">
-			
-			<button class="btn waves-effect waves-light" type="submit" name="salvar">Salvar
-			   <i class="material-icons right">save</i>
-			</button>
-		</form>
+    	<div class="card-content grey lighten-4">
+			<form id="formPessoa" class="formPessoa" action="salvarpessoa" method="post">
+				
+				<label for="nome">Nome:</label>
+				<input type="text" id="nome" name="nome">
+				
+				<label for="sobrenome">Sobrenome:</label>
+				<input type="text" id="sobrenome" name="sobrenome">
+				
+				<label for="idade">Idade:</label>
+				<input type="text" id="idade" name="idade">
+				
+				<button class="btn waves-effect waves-light" type="submit" name="salvar">Salvar
+				   <i class="material-icons right">save</i>
+				</button>
+				
+				<a class="waves-effect waves-light btn red"
+					href="/listapessoas">
+					<i class="material-icons right">list</i>Lista Pessoas</a>
+			</form>
+		</div>
+		
+		<div class="card-content grey lighten-4">
+			<table id="table-1" class="tabelaPessoa">
+				<thead>
+					<tr>
+						<th>ID</th>
+						<th>Nome</th>
+						<th>Sobrenome</th>
+						<th>Idade</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="pessoa : ${pessoas}">
+						<th th:text="${pessoa.id}"></th>
+						<th th:text="${pessoa.nome}"></th>
+						<th th:text="${pessoa.sobrenome}"></th>
+						<th th:text="${pessoa.idade}"></th>
+					</tr>
+				</tbody>
+				<tfoot>
+				</tfoot>
+			</table>
+		</div>
     	
     </div>
   </div>
@@ -61,8 +95,9 @@
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="../js/materialize.js"></script>
+  <script src="../js/materialize.min.js"></script>
+  <script src="../js/init.js"></script>
 
   </body>
 </html>
