--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -54,6 +54,20 @@
 		</div>
 		
 		<div class="card-content grey lighten-4">
+			<form class="formPesquisa" action="pesquisarpessoa" method="post">
+				
+				<label for="pesquisanome">Pesquisa por nome:</label>
+				<input type="text" id="pesquisanome" name="nomepesquisa">
+				
+				
+				<button class="btn waves-effect waves-light botaoPesquisar" type="submit">Buscar
+				   <i class="material-icons right">search</i>
+				</button>
+				
+			</form>
+		</div>
+		
+		<div class="card-content grey lighten-4">
 			<table id="table-1" class="tabelaPessoa">
 				<thead>
 					<tr>
