--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -19,7 +19,7 @@
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="../index.html">Início</a></li>
       </ul>
 	</div>
   </nav>
@@ -41,20 +41,22 @@
 				<div class="row">
 					<div class="input-field col s6">
 						<label for="nome">Nome:</label>
-						<input type="text" id="nome" name="nome" th:field="*{nome}" placeholder="Digite seu nome">
+						<input type="text" id="nome" name="nome" th:field="*{nome}" placeholder="Digite seu nome"
+						required="required">
 					</div>
 					
 					<div class="input-field col s6">
 						<label for="sobrenome">Sobrenome:</label>
 						<input type="text" id="sobrenome" name="sobrenome" th:field="*{sobrenome}" 
-							placeholder="Digite seu sobrenome">
+							placeholder="Digite seu sobrenome" required="required">
 					</div>
 				</div>
 				
 				<div class="row">
 					<div class="input-field col s6">
 						<label for="idade">Idade:</label>
-						<input type="text" id="idade" name="idade" th:field="*{idade}" placeholder="Digite sua idade">
+						<input type="text" id="idade" name="idade" th:field="*{idade}" placeholder="Digite sua idade"
+							required="required">
 					</div>
 				</div>
 				
@@ -64,7 +66,7 @@
 					   <i class="material-icons right">autorenew</i>
 					</button>
 					
-					<button class="btn waves-effect waves-light" type="submit" name="salvar">Salvar
+					<button class="btn waves-effect waves-light green accent-3" type="submit" name="salvar">Salvar
 					   <i class="material-icons right">save</i>
 					</button>
 					
@@ -108,7 +110,7 @@
 				<tbody>
 					<tr th:each="pessoa : ${pessoas}">
 						<th th:text="${pessoa.id}"></th>
-						<th th:text="${pessoa.nome}"></th>
+						<th><a th:href="@{/telefones/{idpessoa}(idpessoa=${pessoa.id})}"><span th:text="${pessoa.nome}"></span></a></th>
 						<th th:text="${pessoa.sobrenome}"></th>
 						<th th:text="${pessoa.idade}"></th>
 						<th>
