--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,12 +22,12 @@
     <div class="nav-wrapper container"><a id="logo-container" href="principal.html" class="brand-logo">LogoMarca</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="/cadastropessoa">Cadastro</a></li>
-        <li><a href="principal.html">Sair</a></li>
+        <li><a href="#">Sair</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="principal.html">Página Principal</a></li>
-        <li><a href="principal.html">Sair</a></li>
+        <li><a href="#">Página Principal</a></li>
+        <li><a href="#">Sair</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
@@ -87,47 +87,30 @@
     <br><br>
   </div>
 
-  <footer class="page-footer orange">
+  <footer class="page-footer  light-blue darken-1">
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Company Bio</h5>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
+          <h5 class="white-text">ArfaxTechSoft</h5>
+          <p class="grey-text text-lighten-4">Projeto desenvolvido usando as principais tecnologias do mercado. Spring Boot - Thymeleaf - Material Design Lite</p>
+		</div>
+	  </div>
+	</div>
 
-
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-        <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
     <div class="footer-copyright">
       <div class="container">
-      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      	Desenvolvido por Leandro Amorim
+      	<a class="orange-text text-lighten-3" href="https://github.com/lheanndroaluno/spring-boot-ats.git"> 
+      	Acesse meu GitHub para ver o código.</a>
       </div>
     </div>
   </footer>
 
-
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="../js/materialize.js"></script>
-  <script src="js/init.js"></script>
+  <script src="../js/materialize.min.js"></script>
+  <script src="../js/init.js"></script>
 
   </body>
 </html>
