--- a/src/main/resources/templates/cadastro/cadastrotelefones.html
+++ b/src/main/resources/templates/cadastro/cadastrotelefones.html
@@ -40,6 +40,44 @@
     		</div>
     	</div>
     	
+    	<div class="card-content  red lighten-1">
+    		<p class="pdetalhes">[ Cadastro de Telefones ]</p>
+    	</div>
+    	<div class="card-content grey lighten-4">
+    		<form id="formTelefone" class="formTelefone" 
+    			th:action="@{/addtelefonepessoa/{pessoaid}(pessoaid=${objpessoa.id})}" method="post">
+				
+				<div class="row">
+					<div class="input-field col s4">
+						<label for="numero">Número:</label>
+						<input type="text" id="numero" name="numero" required="required">
+					</div>
+					
+					<div class="input-field col s4">
+						<label for="operadora">Operadora:</label>
+						<input type="text" id="operadora" name="operadora" required="required">
+					</div>
+					
+					<div class="input-field col s4">
+						<label for="tipo">Tipo:</label>
+						<input type="text" id="tipo" name="tipo" required="required">
+					</div>
+				</div>
+				
+				<div class="row">
+					<button class="btn waves-effect waves-light blue darken-3" type="submit"
+						onclick="document.getElementById('formTelefone').reset();">Novo
+					   <i class="material-icons right">autorenew</i>
+					</button>
+					
+					<button class="btn waves-effect waves-light green accent-3" type="submit" name="salvar">Salvar
+					   <i class="material-icons right">save</i>
+					</button>
+				</div>
+			</form>
+    	</div>
+    	
+    	
     </div>
   </div>	
       
