--- a/src/main/resources/static/css/styleCad.css
+++ b/src/main/resources/static/css/styleCad.css
@@ -46,3 +46,13 @@
 	margin-top: 20px;
 }
 
+.formTelefone{
+	box-shadow: 0px 0px 5px red;
+	padding-top: 10px;
+	padding-left: 20px;
+	padding-bottom: 10px;
+	padding-right: 10px;
+	margin-top: 20px;
+	font-size: 18px;
+}
+
