Exibindo os telefones cadastrados para a pessoa selecionada em tela

--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -16,14 +16,14 @@
   <link type="text/css" rel="stylesheet" href="../materialize/css/materialize.min.css"  media="screen,projection"/>
 </head>
 <body>
+
   <nav class="light-blue lighten-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="../index.html">Início</a></li>
+        <li><a th:href="@{/principal}">Início</a></li>
       </ul>
 	</div>
   </nav>
-  
   
   <div class="container">
     <div class="section">
