--- a/src/main/resources/static/css/styleCad.css
+++ b/src/main/resources/static/css/styleCad.css
@@ -56,3 +56,12 @@
 	font-size: 18px;
 }
 
+.tabelaTelefone{
+	box-shadow: 0px 0px 5px red;
+	padding-top: 10px;
+	padding-left: 20px;
+	padding-bottom: 10px;
+	padding-right: 10px;
+	margin-top: 20px;
+}
+
