--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,14 +17,15 @@
 </head>
 <body>
 
-
+	
+  	
   <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="principal.html" class="brand-logo">LogoMarca</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="/cadastropessoa">Cadastro</a></li>
-        <li><a href="#">Sair</a></li>
-      </ul>
-
+    <div class="nav-wrapper container">
+    	<a id="logo-container" href="principal.html" class="brand-logo">LogoMarca</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+	    <li><a th:href="@{/principal}">Início</a></li>
+	    <li><a href="#">Sair</a></li>
+	  </ul>
       <ul id="nav-mobile" class="sidenav">
         <li><a href="#">Página Principal</a></li>
         <li><a href="#">Sair</a></li>
@@ -110,7 +111,9 @@
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="../js/materialize.js"></script>
   <script src="../js/materialize.min.js"></script>
-  <script src="../js/init.js"></script>
-
+  <script>
+  	
+  </script>
+		
   </body>
 </html>
