Controle de acesso nas páginas html utilizando spring-security5 e thymeleaf

--- a/src/main/resources/templates/principal.html
+++ b/src/main/resources/templates/principal.html
@@ -33,7 +33,7 @@
 	      	</a>
 	      </li>
 	      <li><a href="sass.html">Sass</a></li>
-	      <li><a href="badges.html">Components</a></li>
+	      <li><a href="/logout">Sair</a></li>
 	    </ul>
 	  </div>
 	</div>
