--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -2,7 +2,8 @@
 <html lang="pt-BR"
 		xmlns="http://www.w3.org/1999/xhtml"
 		xmlns:th="http://thymeleaf.org"
-		xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+		xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+		xmlns:sec="www.thymeleaf.org/extras/spring-security">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
@@ -56,7 +57,7 @@
 					</div>
 				</div>
 				
-				<div class="row">
+				<div class="row" sec:authorize="hasRole('ROLE_ADMIN')">
 					<div class="input-field col s6">
 						<label for="idade">Idade:</label>
 						<input type="text" id="idade" name="idade" th:field="*{idade}" placeholder="Digite sua idade">
